--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.14",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
