--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@tailwindcss/vite": "^4.1.14",
     "next": "15.5.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
