--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.1.14",
+    "lucide-react": "^0.548.0",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
